Project

General

Profile

Actions

Bug #22655

closed

rgw: Location element not returned correctly from CompleteMultipartUpload

Added by Matt Benjamin over 6 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Support
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Per https://docs.aws.amazon.com/AmazonS3/latest/API/mpUploadComplete.html, the <Location> element in the HTTP response body should contain a (or the) HTTP URI "that identifies the newly created object."

RGW has not been doing this.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #22905: luminous: rgw: Location element not returned correctly from CompleteMultipartUploadResolvedMatt BenjaminActions
Copied to rgw - Backport #24944: jewel: rgw: Location element not returned correctly from CompleteMultipartUploadRejectedMatt BenjaminActions
Actions #1

Updated by Matt Benjamin over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Yehuda Sadeh over 6 years ago

  • Status changed from Fix Under Review to 7
Actions #4

Updated by Matt Benjamin about 6 years ago

  • Status changed from 7 to Pending Backport
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22905: luminous: rgw: Location element not returned correctly from CompleteMultipartUpload added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions #7

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Resolved to Pending Backport
  • Target version deleted (v13.0.0)
  • Backport changed from luminous to luminous,jewel
Actions #8

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24944: jewel: rgw: Location element not returned correctly from CompleteMultipartUpload added
Actions #9

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF