rgw: return valid Location element, CompleteMultipartUpload

Returns URIs that should reach the server regardless of domain
configuration, and following tenant:bucket convention, if
applicable.

Fixes: https://tracker.ceph.com/issues/22655

(cherry picked from commit 0357a8b7ce01a7cd5e3a73f5e0f42617d56b7cfb)
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>